fixing spacing issues in h2

--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,7 @@ figcaption {
   margin-top: -50px;
 }
 .blog-posts ul {
+  padding-top: 15px;
   padding-bottom: 30px;
 }
 .blog-posts ul li {
@@ -412,6 +413,9 @@ header.post-list h1{
   padding-bottom: 10px;
   display: block;
 }
+.no-projects li header span {
+  font-size: 14px;
+}
 .no-projects li footer {
   padding-top: 10px;
 }
@@ -497,7 +501,7 @@ footer.footer-main .words:hover{
 .project-title {
   color: black;
   display: block;
-  padding-top: 19px;
+  padding-top: 15px;
   font-size: 14px;
   line-height: 18px;
 }
@@ -506,7 +510,7 @@ footer.footer-main .words:hover{
   display: block;
   font-size: 12px;
   opacity: .4;
-  padding-top: 12px
+  padding-top: 8px
 }
 
 /* Media Queries
